--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
     "react-native-size-matters": "^0.1.4",
+    "react-native-swiper": "^1.5.13",
     "react-navigation": "^2.18.2"
   },
   "devDependencies": {
